<resources>
    <string name="app_name">Faeron Ages</string>
    <string name="start_game">START GAME</string>
    <string name="options">OPTIONS</string>
    <string name="achievement">ACHIEVE</string>
    <string name="quit_game">QUIT GAME</string>
    <string name="title_activity_beginer">beginer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sptions">Settings</string>

    <!-- Strings of roll and role creation -->
    <string name="STR">力量</string>
    <string name="CON">体力</string>
    <string name="DEX">敏捷</string>
    <string name="INT">智力</string>
    <string name="CHA">魅力</string>
    <string name="roll">ROLL</string>
    <string name="n_0">0</string>
    <string name="next">next</string>
    <string name="age">年龄</string>
    <string name="name">名字</string>
    <string name="race">种族</string>
    <!-- Strings of race -->
    <string name="Humans">人类</string>
    <string name="Dwarves">矮人</string>
    <string name="Elf">精灵</string>
    <string name="Gnome">侏儒</string>
    <string name="HalfOrc">半兽人</string>
    <string name="HalfLing">半身人</string>

    <string name="faith">信仰</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_options">options</string>
    <string name="beginAdventure">now begin!</string>
    <string name="what">\?</string>
    <string name="defaultNamw">Bhaal</string>
    <string name="defaultAge">21</string>
    <string name="god_Boccob">魔法之神博卡布（Boccob） 绝对中立阵营</string>
    <string name="god_CorellonLarethian">精灵之神柯瑞隆·拉瑞斯安（CorellonLarethian） 混乱善良阵营</string>
    <string name="god_Heironeous">战斗之神海若尼斯（Heironeous) 守序善良/邪恶阵营</string>
    <string name="god_St.Cuthbert">惩罚之神圣·库斯伯特(St.Cuthbert) 守序中立阵营</string>
    <string name="god_Olidammara">游荡者之神渥利达马拉(Olidammara) 混乱中立阵营</string>
    <string name="god_Pelor">太阳神培罗(Pelor) 中立善良阵营</string>
    <string name="job">职业</string>
    <string name="title_activity_choose_job">chooseJob</string>
    <string name="cleric">牧师</string>
    <string name="druid">德鲁伊</string>
    <string name="rogue">游荡者</string>
    <string name="sorcerer">法师</string>
    <string name="fighter">战士</string>
    <string name="bard">吟游诗人</string>
    <string name="paladin">圣骑士</string>
    <string name="eventLog">Event Log</string>
    <string name="rua">rua</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="character">人物</string>
    <string name="bag">背包</string>
    <string name="equipment">装备</string>
    <string name="spell">法术</string>
    <string name="townEvent">城镇事件</string>
    <string name="give_up">放弃</string>
    <string name="C">C</string>
    <string name="missionList">任务列表</string>
    <string name="camp">阵营观察</string>
    <string name="fame">声望</string>
    <string name="evil">邪恶</string>
    <string name="chaos">混乱</string>
    <string name="lawful">秩序</string>
    <string name="justice">正义</string>
    <string name="god_ObadHai" />
    <string name="conti">continue</string>
</resources>
